# recigraph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json  tox.ini
.github/instructions/: default.instructions.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: architecture.md  compiler.md  development.md  dsl.md  formatting.md  releasing.md
docs/decisions/: adr-001.md  adr-002.md  adr-003.md  adr-004.md  adr-005.md  adr-006.md  adr-007.md  adr-008.md  adr-009.md  adr-010.md
docs/dsl/: README.md  compiler_spec.md  grammar.md  ingredients.md  procedure.md  references.md  step.md  step_semantics.md
docs/instructions/: compiler_step_0.md
examples/001_hello_world/: ingredients.yaml  procedures.yaml
examples/001_hello_world/expected/: output.txt
examples/002_simple/: ingredients.yaml  procedures.yaml
examples/002_simple/expected/: output.txt
examples/003_equipment/: equipment.yaml  ingredients.yaml  procedure.yaml
examples/003_equipment/expected/: output.txt
examples/004_substitution/: ingredients.yaml  procedure.yaml
examples/004_substitution/expected/: output.txt
examples/005_shared_procedure/: ingredients.yaml  procedures.yaml
examples/005_shared_procedure/expected/: output.txt
src/recigraph/: README.md  __init__.py  compiler.py
src/recigraph/cli/: __init__.py
src/recigraph/loader/: __init__.py  loader.py  parser.py
src/recigraph/model/: __init__.py  compiler.py  graph.py  procedure.py  reference.py  step.py
src/recigraph/registry/: __init__.py  base.py  registries.py
src/recigraph/rendering/: __init__.py  protocol.py
src/recigraph/rendering/common/: __init__.py  artifact.py  result.py  view_model.py
src/recigraph/rendering/html/: __init__.py  renderer.py  view_models.py
src/recigraph/rendering/html/templates/: index.html.j2  recipe.html.j2
src/recigraph/rendering/text/: __init__.py  formatter.py
src/recigraph/resolver/: __init__.py  graph_init.py  graph_transformer.py  procedure_loop.py  resolver.py  step_engine.py
src/recigraph/validation/: __init__.py  validator.py
tests/: test_package.py
tests/cli/: test_build_command.py  test_compile_command.py  test_example_output_golden.py  test_render_command.py
tests/compiler/: test_examples.py  test_orchestrator.py
tests/fixtures/procedures/: substitution_base.yaml  vanilla_base.yaml
tests/loader/: test_loader.py  test_parser.py
tests/model/: test_compiler_model.py  test_reference_model.py  test_step_and_procedure_model.py
tests/registry/: __init__.py  test_registry.py
tests/rendering/: test_html_renderer.py
tests/resolver/: test_graph_init.py  test_graph_transformer.py  test_procedure_loop.py  test_resolver.py  test_step_engine.py
tests/validation/: test_validator.py
