[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "recigraph"
# Version is derived entirely from Git tags via setuptools-scm.
# Do NOT hard-code a version here.
dynamic = ["version"]
description = "Recipes as structured knowledge, not documents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.9",
    "pyright>=1.1",
]

[project.scripts]
recigraph = "recigraph.cli:main"

# ---------------------------------------------------------------------------
# setuptools-scm: derive version from Git tags
#
# The fallback_version is only used when the repository has no tags at all
# (e.g. a fresh clone before the first release).  It is never committed as
# the canonical version.
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
version_scheme = "guess-next-dev"   # 0.1.0.dev5+gabc1234 between tags
local_scheme = "node-and-date"
fallback_version = "0.0.0.dev0"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735) — replaces the deprecated [tool.uv.dev-dependencies]
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.9",
    "pyright>=1.1",
    "tox>=4",
    "tox-uv>=1",
    "pre-commit>=4",
    "twine>=6",
]

# ---------------------------------------------------------------------------
# Ruff: linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["recigraph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

# ---------------------------------------------------------------------------
# Pyright: static type checking
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingModuleSource = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-q"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/recigraph"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# setuptools: package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"recigraph.rendering.html" = ["templates/*.j2"]
